--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
  text-align: center;
- background: url("./yard.jpg") no-repeat center center fixed;
+ background: url("./images/yard.jpg") no-repeat center center fixed;
  background-size: cover;
  min-height: 100%;
  overflow: visible;
